# calculator_divider_income

./: Cargo.toml
src/: main.rs
ui/: app-window.slint
wix/: main.wxs
