[package]
name = "incomedivider-desktop"
authors = ["Yoris Woka <yoris.woka@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "A desktop app that divides income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"

[build-dependencies]
slint-build = "1.14.1"

